small bug fixes

--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -475,7 +475,7 @@
                     });
 
                     $('#datatable-tomorrow tbody').on('click', '#remove', function () {
-                        confirmDelete(this, tFuture);
+                        confirmDelete(this, tTomorrow);
                     });
 
                     $('#datatable-tomorrow tbody').on('click', '#backup', function () {
