--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -155,6 +155,7 @@
                         btnStr += /*showBtn + " " +*/ editBtn;
 
                         if (arr_volunteers[i].IsActive == false) {
+                            btnStr = "";
                             var reactiveBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזור'><i class='fa fa-undo' ></i></button>";
                             btnStr += " " + reactiveBtn;
                         }
