--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -593,11 +593,11 @@
                 pushMsg = "נמחקה ההסעה של " + data[3] + " מ: " + data[2] + " ל: " + data[1] + ", היום בשעה " + data[0] + " ע\"י העוזר/ת " + userName;
             }
             else {
-                patientNameMessage = data[4];
-                originNameMessage = data[2];
-                destinationNameMessage = data[3];
+                patientNameMessage = data[3];
+                originNameMessage = data[1];
+                destinationNameMessage = data[2];
                 var hour = " בשעה ";
-                if (data[1] == "אחה''צ") hour = " ";
+                if (data[0] == "אחה''צ") hour = " ";
                 msg = "מחיקת ההסעה של " + data[4] + " מ: " + data[2] + " ל: " + data[3] + ", בתאריך " + data[0] + hour + data[1];
                 msg += "حذف سفرية " + data[3] + " من: " + data[2] + " الى: " + data[1] + ", في " + data[0] + hour + data[1];
                 pushMsg = "נמחקה ההסעה של " + data[4] + " מ: " + data[2] + " ל: " + data[3] + ", בתאריך " + data[0] + hour + data[1] + " ע\"י העוזר/ת " + userName;
@@ -620,8 +620,11 @@
 
                 var RidePat = new Object();
                 RidePat.RidePatNum = arr_details.RidePatNum;
-
+                 
                 var tempDate = data[0];
+                if (tempDate == "אחה''צ") {
+                    tempDate = "01/01/1970"; // Fictional date for deletion
+                }
                 var tempDateReveresed = tempDate.split('/').reverse().join('/')
 
                 var date = new Date(tempDateReveresed);
@@ -634,6 +637,7 @@
                     RidePat.Date = date;
 
                 }
+                
 
                 var Pat = new Object();
                 Pat.DisplayName = patientNameMessage;
